v1 de experiencia cerrado, se ha tomado la decision de eliminar el endpoint de PUT experiencia, ahora la experiencia solo la calcula el backend depsues de dar like, comentar o postear una publicacion
